@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-09T16:25:53Z",
+  "timestamp" : "2023-08-10T01:37:58Z",
   "count_outdated" : 457,
   "uniques_outdated" : 212,
-  "count" : 469,
-  "uniques" : 219,
+  "count" : 470,
+  "uniques" : 220,
   "clones" : [
     {
       "timestamp": "2023-07-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2023-08-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
