@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-07-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2023-08-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
